-added di. -added appRegex. -integrated with login Ep. -added login repo and cubit. -added login states with validation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   flutter_svg: ^2.2.1
   flutter_screenutil: ^5.9.3
+  build_runner: ^2.9.0
 
 dev_dependencies:
   flutter_test:
